<resources>
    <string name="app_name">XFood</string>

    <!-- Titulo das Tabs -->
    <string name="tab_favoritos">Favoritos</string>
    <string name="tab_resumo">Resumo</string>

    <!-- Texto dos Botões -->
    <string name="btn_efetuarPedido">Efetuar Pedido</string>

    <!-- Opções Menu Toolbar -->
    <string name="menu_configuracoes">Configurações</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_sair">Sair</string>

    <!-- Opções do NavDrawer Menu -->
    <string name="nav_porcoes">Porções</string>
    <string name="nav_refeicoes">Refeições</string>
    <string name="nav_pizzas">Pizzas</string>
    <string name="nav_lanches">Lanches</string>
    <string name="nav_alcoolicas">Bebidas Alcoólicas</string>
    <string name="nav_refrigerantes">Refrigerantes</string>
    <string name="nav_sucos">Sucos</string>

    <!-- Mensagens -->
    <string name="nenhum_item">Nenhum ítem para exibir.</string>
    <string name="carregando">Carregando...</string>
    <string name="total">Total: </string>

    <!-- Dialog Quantidade -->
    <string name="quantidade">Selecione a quantidade:</string>
    <string name="menos">-</string>
    <string name="mais">+</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
</resources>
